--- a/public/css/base/variables.css
+++ b/public/css/base/variables.css
@@ -17,8 +17,8 @@
     --color-text-light: #666666;
     --color-text-muted: #757575;
     --color-heading: #222222;
-    --color-primary: #3498db;
-    --color-primary-dark: #2980b9;
+    --color-primary: #e615ab;
+    --color-primary-dark: #98e6a8;
     --color-success: #27ae60;
     --color-danger: #e74c3c;
     --color-danger-dark: #c0392b;
