--- a/public/css/pages/about.css
+++ b/public/css/pages/about.css
@@ -80,6 +80,7 @@
     box-shadow: 0 2px 8px rgba(230, 21, 171,0.8);
     padding: 24px;
     max-width: 320px;
+    );
     /*border-color: rgb(230, 21, 171);*/
     /*border-width: medium;*/
     /*border-style: solid;*/
@@ -88,3 +89,11 @@
     color: #444;
     font-size: 15px;
 }
+
+.card:hover {
+    box-shadow: 0 4px 16px rgba(230, 21, 171, 1);
+    transform: scale(1.03);
+    transition: box-shadow 0.2s, transform 0.2s;
+}
+
+
